[metadata]
name = circa
version = 0.1.0
description = An approximate static execution tracer for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fnamer/circa
author = Twan Walpot
license = MIT
license_file = LICENSE

[flake8]
max-line-length = 88
